Term 7/Compiler/Phase2/src/grammer/XParser.java
// Generated from /Users/hasan/Desktop/Projects/University/Term 7/Compiler/Phase2/src/grammer/X.g4 by ANTLR 4.5.3
package grammer;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IntegerConstant=1, CharacterConstant=2, Typedef=3, Return=4, If=5, Else=6, 
		Size=7, Void=8, Int=9, Char=10, String=11, While=12, Break=13, Nil=14, 
		NumberSign=15, Of=16, In=17, As=18, List=19, Foreach=20, Head=21, Tail=22, 
		DollarSign=23, LeftParen=24, RightParen=25, LeftBracket=26, RightBracket=27, 
		LeftBrace=28, RightBrace=29, Less=30, Greater=31, Plus=32, Minus=33, Star=34, 
		Div=35, AndAnd=36, OrOr=37, Not=38, Colon=39, Semi=40, Comma=41, Assign=42, 
		Equal=43, NotEqual=44, Arrow=45, Dot=46, StringLiteral=47, NotPermittedCharacterConstant=48, 
		Identifier=49, Whitespace=50, Newline=51, BlockComment=52, LineComment=53;
	public static final int
		RULE_program = 0, RULE_global = 1, RULE_variableDefinition = 2, RULE_variableNaming = 3, 
		RULE_expression = 4, RULE_andExpression = 5, RULE_equivalentExpression = 6, 
		RULE_compareExpression = 7, RULE_plusAndMinusExpression = 8, RULE_mulAndDivExpression = 9, 
		RULE_unaryExpression = 10, RULE_endPointOfExpression = 11, RULE_arithmeticConstants = 12, 
		RULE_assignment = 13, RULE_listOrFunctionAccess = 14, RULE_leftPositionOfAccess = 15, 
		RULE_rightPositionOfAccess = 16, RULE_identifierAccess = 17, RULE_indexAccess = 18, 
		RULE_functionAccess = 19, RULE_listConstant = 20, RULE_typeForwardDeclaration = 21, 
		RULE_typeDefinition = 22, RULE_pointerToFunction = 23, RULE_ptfInputs = 24, 
		RULE_normalListDefinition = 25, RULE_specialListDefinition = 26, RULE_listDefinition = 27, 
		RULE_listAttributes = 28, RULE_listAttribute = 29, RULE_functionForwardDeclaration = 30, 
		RULE_functionDefinition = 31, RULE_functionHeader = 32, RULE_functionDeclarationHeader = 33, 
		RULE_functionBody = 34, RULE_functionInputs = 35, RULE_functionInput = 36, 
		RULE_functionDeclarationInputs = 37, RULE_functionDeclarationInput = 38, 
		RULE_type = 39, RULE_primitive = 40, RULE_functionName = 41, RULE_typedefName = 42, 
		RULE_statement = 43, RULE_simpleStatement = 44, RULE_statementWitIfElseNotIf = 45, 
		RULE_block = 46, RULE_ifStatement = 47, RULE_ifElse = 48, RULE_ifGeneral = 49, 
		RULE_whileStatement = 50, RULE_foreachStatement = 51;
	public static final String[] ruleNames = {
		"program", "global", "variableDefinition", "variableNaming", "expression", 
		"andExpression", "equivalentExpression", "compareExpression", "plusAndMinusExpression", 
		"mulAndDivExpression", "unaryExpression", "endPointOfExpression", "arithmeticConstants", 
		"assignment", "listOrFunctionAccess", "leftPositionOfAccess", "rightPositionOfAccess", 
		"identifierAccess", "indexAccess", "functionAccess", "listConstant", "typeForwardDeclaration", 
		"typeDefinition", "pointerToFunction", "ptfInputs", "normalListDefinition", 
		"specialListDefinition", "listDefinition", "listAttributes", "listAttribute", 
		"functionForwardDeclaration", "functionDefinition", "functionHeader", 
		"functionDeclarationHeader", "functionBody", "functionInputs", "functionInput", 
		"functionDeclarationInputs", "functionDeclarationInput", "type", "primitive", 
		"functionName", "typedefName", "statement", "simpleStatement", "statementWitIfElseNotIf", 
		"block", "ifStatement", "ifElse", "ifGeneral", "whileStatement", "foreachStatement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'typedef'", "'return'", "'if'", "'else'", "'size'", 
		"'void'", "'int'", "'char'", "'string'", "'while'", "'break'", "'nil'", 
		"'#'", "'of'", "'in'", "'as'", "'list'", "'foreach'", "'head'", "'tail'", 
		"'$'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'>'", "'+'", 
		"'-'", "'*'", "'/'", "'&&'", "'||'", "'!'", "':'", "';'", "','", "'='", 
		"'=='", "'!='", "'->'", "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "IntegerConstant", "CharacterConstant", "Typedef", "Return", "If", 
		"Else", "Size", "Void", "Int", "Char", "String", "While", "Break", "Nil", 
		"NumberSign", "Of", "In", "As", "List", "Foreach", "Head", "Tail", "DollarSign", 
		"LeftParen", "RightParen", "LeftBracket", "RightBracket", "LeftBrace", 
		"RightBrace", "Less", "Greater", "Plus", "Minus", "Star", "Div", "AndAnd", 
		"OrOr", "Not", "Colon", "Semi", "Comma", "Assign", "Equal", "NotEqual", 
		"Arrow", "Dot", "StringLiteral", "NotPermittedCharacterConstant", "Identifier", 
		"Whitespace", "Newline", "BlockComment", "LineComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "X.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<GlobalContext> global() {
			return getRuleContexts(GlobalContext.class);
		}
		public GlobalContext global(int i) {
			return getRuleContext(GlobalContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XVisitor ) return ((XVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Typedef) | (1L << Void) | (1L << Int) | (1L << Char) | (1L << String) | (1L << List) | (1L << LeftBracket) | (1L << Less) | (1L << Identifier))) != 0)) {
				{
				{
				setState(104);
				global();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalContext extends ParserRuleContext {
		public TypeForwardDeclarationContext typeForwardDeclaration() {
			return getRuleContext(TypeForwardDeclarationContext.class,0);
		}
		public TypeDefinitionContext typeDefinition() {
			return getRuleContext(TypeDefinitionContext.class,0);
		}
		public VariableDefinitionContext variableDefinition() {
			return getRuleContext(VariableDefinitionContext.class,0);
		}
		public FunctionForwardDeclarationContext functionForwardDeclaration() {
			return getRuleContext(FunctionForwardDeclarationContext.class,0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XVisitor ) return ((XVisitor<? extends T>)visitor).visitGlobal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global);
		try {
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				typeForwardDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				typeDefinition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				variableDefinition();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				functionForwardDeclaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				functionDefinition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDefinitionContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<VariableNamingContext> variableNaming() {
			return getRuleContexts(VariableNamingContext.class);
		}
		public VariableNamingContext variableNaming(int i) {
			return getRuleContext(VariableNamingContext.class,i);
		}
		public TerminalNode Semi() { return getToken(XParser.Semi, 0); }
		public List<TerminalNode> Comma() { return getTokens(XParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(XParser.Comma, i);
		}
		public VariableDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDefinition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XVisitor ) return ((XVisitor<? extends T>)visitor).visitVariableDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDefinitionContext variableDefinition() throws RecognitionException {
		VariableDefinitionContext _localctx = new VariableDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableDefinition);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			type();
			setState(123);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(118);
					variableNaming();
					setState(119);
					match(Comma);
					}
					} 
				}
				setState(125);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(126);
			variableNaming();
			setState(127);
			match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableNamingContext extends ParserRuleContext {
		public boolean haveExpression;
		public TerminalNode Identifier() { return getToken(XParser.Identifier, 0); }
		public TerminalNode Assign() { return getToken(XParser.Assign, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VariableNamingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableNaming; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XVisitor ) return ((XVisitor<? extends T>)visitor).visitVariableNaming(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableNamingContext variableNaming() throws RecognitionException {
		VariableNamingContext _localctx = new VariableNamingContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableNaming);
		try {
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				match(Identifier);
				((VariableNamingContext)_localctx).haveExpression =  false;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				match(Identifier);
				setState(132);
				match(Assign);
				setState(133);
				expression();
				((VariableNamingContext)_localctx).haveExpression =  true;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public int path;
		public Token op;
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public AndExpressionContext andExpression() {
			return getRuleContext(AndExpressionContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode OrOr() { return getToken(XParser.OrOr, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XVisitor ) return ((XVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expression);
		try {
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				assignment();
				((ExpressionContext)_localctx).path =  0;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(141);
				andExpression();
				setState(142);
				((ExpressionContext)_localctx).op = match(OrOr);
				setState(143);
				expression();
				}
				((ExpressionContext)_localctx).path =  1;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(147);
				andExpression();
				((ExpressionContext)_localctx).path =  2;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndExpressionContext extends ParserRuleContext {
		public int path;
		public Token op;
		public EquivalentExpressionContext equivalentExpression() {
			return getRuleContext(EquivalentExpressionContext.class,0);
		}
		public AndExpressionContext andExpression() {
			return getRuleContext(AndExpressionContext.class,0);
		}
		public TerminalNode AndAnd() { return getToken(XParser.AndAnd, 0); }
		public AndExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XVisitor ) return ((XVisitor<? extends T>)visitor).visitAndExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndExpressionContext andExpression() throws RecognitionException {
		AndExpressionContext _localctx = new AndExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_andExpression);
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(152);
				equivalentExpression();
				setState(153);
				((AndExpressionContext)_localctx).op = match(AndAnd);
				setState(154);
				andExpression();
				}
				((AndExpressionContext)_localctx).path =  0;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				equivalentExpression();
				((AndExpressionContext)_localctx).path =  1;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquivalentExpressionContext extends ParserRuleContext {
		public int path;
		public Token op;
		public CompareExpressionContext compareExpression() {
			return getRuleContext(CompareExpressionContext.class,0);
		}
		public EquivalentExpressionContext equivalentExpression() {
			return getRuleContext(EquivalentExpressionContext.class,0);
		}
		public TerminalNode Equal() { return getToken(XParser.Equal, 0); }
		public TerminalNode NotEqual() { return getToken(XParser.NotEqual, 0); }
		public EquivalentExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equivalentExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XVisitor ) return ((XVisitor<? extends T>)visitor).visitEquivalentExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EquivalentExpressionContext equivalentExpression() throws RecognitionException {
		EquivalentExpressionContext _localctx = new EquivalentExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_equivalentExpression);
		int _la;
		try {
			setState(172);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(163);
				compareExpression();
				setState(164);
				((EquivalentExpressionContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==Equal || _la==NotEqual) ) {
					((EquivalentExpressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(165);
				equivalentExpression();
				}
				((EquivalentExpressionContext)_localctx).path =  0;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				compareExpression();
				((EquivalentExpressionContext)_localctx).path =  1;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompareExpressionContext extends ParserRuleContext {
		public int path;
		public Token op;
		public PlusAndMinusExpressionContext plusAndMinusExpression() {
			return getRuleContext(PlusAndMinusExpressionContext.class,0);
		}
		public CompareExpressionContext compareExpression() {
			return getRuleContext(CompareExpressionContext.class,0);
		}
		public TerminalNode Less() { return getToken(XParser.Less, 0); }
		public TerminalNode Greater() { return getToken(XParser.Greater, 0); }
		public CompareExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compareExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XVisitor ) return ((XVisitor<? extends T>)visitor).visitCompareExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompareExpressionContext compareExpression() throws RecognitionException {
		CompareExpressionContext _localctx = new CompareExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_compareExpression);
		int _la;
		try {
			setState(183);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(174);
				plusAndMinusExpression();
				setState(175);
				((CompareExpressionContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==Less || _la==Greater) ) {
					((CompareExpressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(176);
				compareExpression();
				}
				((CompareExpressionContext)_localctx).path =  0;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(180);
				plusAndMinusExpression();
				((CompareExpressionContext)_localctx).path =  1;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlusAndMinusExpressionContext extends ParserRuleContext {
		public int path;
		public Token op;
		public MulAndDivExpressionContext mulAndDivExpression() {
			return getRuleContext(MulAndDivExpressionContext.class,0);
		}
		public PlusAndMinusExpressionContext plusAndMinusExpression() {
			return getRuleContext(PlusAndMinusExpressionContext.class,0);
		}
		public TerminalNode Plus() { return getToken(XParser.Plus, 0); }
		public TerminalNode Minus() { return getToken(XParser.Minus, 0); }
		public PlusAndMinusExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plusAndMinusExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XVisitor ) return ((XVisitor<? extends T>)visitor).visitPlusAndMinusExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlusAndMinusExpressionContext plusAndMinusExpression() throws RecognitionException {
		PlusAndMinusExpressionContext _localctx = new PlusAndMinusExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_plusAndMinusExpression);
		int _la;
		try {
			setState(194);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(185);
				mulAndDivExpression();
				setState(186);
				((PlusAndMinusExpressionContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==Plus || _la==Minus) ) {
					((PlusAndMinusExpressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(187);
				plusAndMinusExpression();
				}
				((PlusAndMinusExpressionContext)_localctx).path =  0;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(191);
				mulAndDivExpression();
				((PlusAndMinusExpressionContext)_localctx).path =  1;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
